--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,4 +105,44 @@ margin-bottom: 0px;
     padding: 14px 30px ;
     border-radius: 8px;
   }
-  
+  .recentnews{
+   margin: 32px;
+   padding: 32px;
+
+  }
+  .news-desc{
+    color: gray;
+  }
+  .news1{
+    display: flex;
+    gap: 32px;
+    margin: auto;
+    padding: 20px;
+  }
+  .image-1{
+    border-radius: 24px ;
+  }
+  .image-2{
+    border-radius: 24px ;
+    align-content: end;
+  }
+  .news2{
+    display: flex;
+    flex-direction: row-reverse ;
+    gap: 32px;
+    margin: auto;
+    padding: 20px;
+  }
+  .news-content{
+    margin: 20px;
+    padding: 20px;
+    
+  }
+  .newsstart{
+    color: gray;
+    font-size: 14px;
+  }
+  .mainnews1{
+    color: gray;
+    font-size: 14px;
+  }
