--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,11 +65,11 @@ margin-bottom: 0px;
     width: 100%;
     padding: 32px 32px;
     border-radius: 16px;
-    background-color: #c1d1ee;
+    background-color: rgba(84, 144, 245, 0.2);
     
   }
   .btn-1{
-    background-color: #5490F5;
+    background-color: rgba(84, 144, 245, 1);
     font-weight: bold;
     color: white;
     border: none;
@@ -80,11 +80,11 @@ margin-bottom: 0px;
     width: 100%;
     padding: 32px 32px;
     border-radius: 16px;
-    background-color: #a4f0ca;
+    background-color: rgba(198, 228, 214, 1);
    
   }
   .btn-2{
-    background-color: #09A15C;
+    background-color: rgba(9, 161, 92, 1);
     font-weight: bold;
     color: white;
     border: none;
@@ -96,10 +96,10 @@ margin-bottom: 0px;
     width: 100%;
     padding: 32px 32px;
     border-radius: 16px;
-    background-color: #f6ffc3;
+    background-color: rgba(247, 235, 207, 1);
   }
   .btn-3{
-    background-color: #FFC239;
+    background-color: rgba(255, 194, 57, 1);
     font-weight: bold;
     color: white;
     border: none;
@@ -220,6 +220,7 @@ border: none;
  background-color: rgba(255, 255, 255, 1) ;
  box-shadow: 0px 6px 100px 0px rgba(14, 14, 14, 0.20) ;
  margin-bottom: 10px;
+ border-radius: 80px;
 }
 .btn-donate1{
   text-align: center;
@@ -274,6 +275,7 @@ button:hover{
 .newsletter{
   background-color: rgba(198, 228, 214, 1);
   border-radius: 24px;
+  border-color: black;
 
  margin-bottom: 32px;
  margin-top: 32px;
@@ -300,4 +302,8 @@ button:hover{
   width: 50%;
   border-radius: 6px;
   border: none;
+}
+::placeholder{
+  color: rgba(14, 14, 14, 0.3);
+  font-style: bold;
 }
